# pare

./: .pre-commit-config.yaml  Cargo.toml
src/: main.rs
src/compression_models/: lzma_multi_stream.rs  lzma_single_file.rs  mod.rs
src/seq_files/: fastq.rs
