[package]
name = "pare"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
thiserror = "1"
xz2 = "0.1.7"
tempfile = "3"
tar = "0"
serde_json = "1.0"

[dev-dependencies]
filesystem = "0.4.4"
